--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-loading-skeleton": "^3.0.3",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
