--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-switch": "^6.0.0",
     "redux": "^4.1.2",
     "styled-components": "^5.3.3",
+    "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,6 +44,8 @@
     ]
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.5",
+    "@types/styled-components": "^5.1.26",
     "node-sass": "^7.0.1"
   }
 }
